# binacpp

./: .gitignore  CMakeLists.txt  conanfile.py
src/: binacpp.cpp  binacpp.h  binacpp_export.h
